k8s/phpldapadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: corp-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    sleep 12 &&
                    cp /pla-config/config.php /var/www/phpldapadmin/config/config.php &&
                    chmod 400 /var/www/phpldapadmin/config/config.php &&
                    chown www-data:www-data /var/www/phpldapadmin/config/config.php
          volumeMounts:
            - name: pla-config
              mountPath: /pla-config
      volumes:
        - name: pla-config
          configMap:
            name: phpldapadmin-config
